server and client, intergrated

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js"
+    "server": "nodemon server.js",
+    "start": "node server.js",
+    "client": "npm run start --prefix ../frontend",
+    "dev":"concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
