--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "server": "nodemon server.js",
     "start": "node server.js",
     "client": "npm run start --prefix ../frontend",
-    "dev":"concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.6",
     "mongoose": "^5.11.17",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
